# Real-Estate-Simulator

./: Cargo.toml
real-estate-sim/: Cargo.toml
real-estate-sim/data/: sample_config.json
real-estate-sim/src/: lib.rs  main.rs  prelude.rs
real-estate-sim/src/engine/: amortization.rs  cashflow.rs  compounding.rs  mod.rs  taxes.rs
real-estate-sim/src/model/: enums.rs  loan.rs  market.rs  mod.rs  portfolio.rs  property.rs
real-estate-sim/src/sim/: config.rs  mod.rs  result.rs  runner.rs
real-estate-sim/src/util/: mod.rs  rng.rs  time.rs
