[package]
name = "real-estate-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std", "small_rng"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"
